updated links to schedule

--- a/about.html
+++ b/about.html
@@ -73,9 +73,10 @@
         <div class="w3-center">
             <h3 class="w3-center">Choose How You Show Up</h3>
 
-            <p>I help you recognize the underlying problems and give you the tools to choose how you want to show up
-                as a mom, a wife, and a daughter of God. You can choose the mother you want to be regardless of your
-                children's actions or feelings!</p>
+            <p>Together we uncover the thoughts that are not serving you well. I teach you how to choose the thoughts
+                you want to think and how to get rid of the ones that are causing unnecessary pain and sorrow in your
+                life. You will learn that you have total control over your feelings and your results that we often
+                believe are out of our control. It is time to empower yourself!</p>
         </div>
         <div class="w3-center">
             <div class="w3-padding-16 w3-row w3-margin">
@@ -85,7 +86,7 @@
                         color:white;">WORK WITH ME</a></button>
 
                 <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
-                    style="background-color: #6200b3!important;"><a href="about.html" class="w3-button button-hover"
+                    style="background-color: #6200b3!important;"><a href="learnmore.html" class="w3-button button-hover"
                         style="background-color: #6200b3!important;
                         color:white;">LEARN MORE</a></button>
             </div>
