--- a/contact.html
+++ b/contact.html
@@ -46,59 +46,84 @@
                 approach to empower you as a mother!</p>
         </div>
     </div>
-    
-        <!-- Third Parallax Image with Portfolio Text -->
-        <div class="bgimg-3 w3-display-container w3-opacity-min">
-            <div class="w3-display-middle">
-                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
-            </div>
-        </div>
-        <!-- Contact Section -->
-        <div class="w3-content w3-container w3-padding-64">
-            <h3 class="w3-center">Conatct Me</h3>
-            <!-- <p class="w3-center"><em>I'd love your feedback!</em></p> -->
 
-            <div class="w3-row w3-padding-32 w3-section">
-                <div class="w3-col m4 w3-container">
-                    <a href="https://goo.gl/maps/Z2GVpd2rYc9iHxY67" title="Location" target="_blank"
-                        class="w3-hover-opacity"><img src="images/static_map.php.png" class="w3-image w3-round"
-                            style="width:100%"></a>
-                </div>
-                <div class="w3-col m8 w3-panel">
-                    <div class="w3-xlarge w3-margin-bottom">
-                        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Syracuse
-                        Utah,
-                        US<br>
-                        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: (801)
-                        513-3065<br>
-                        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email:
-                        cory@coryhardmancoaching.com<br>
+    <!-- Third Parallax Image with Portfolio Text -->
+    <div class="bgimg-3 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
+        </div>
+    </div>
+    <!-- Contact Section -->
+    <div class="w3-content w3-container w3-padding-64">
+        <h3 class="w3-center">Work With Me</h3>
+        <!-- <p class="w3-center"><em>I'd love your feedback!</em></p> -->
+
+        <div class="w3-row w3-padding-32 w3-section">
+            <!-- <div class="w3-col m4 w3-container">
+                <a href="https://goo.gl/maps/Z2GVpd2rYc9iHxY67" title="Location" target="_blank"
+                    class="w3-hover-opacity"><img src="images/static_map.php.png" class="w3-image w3-round"
+                        style="width:100%"></a>
+            </div> -->
+            <div class="w3-panel w3-center">
+                <div class="w3-xlarge w3-margin-bottom">
+                    <!-- <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Syracuse
+                    Utah,
+                    US<br> -->
+                    <div class="w3-hide-large w3-hide-medium"
+                        style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
+                            class="fa fa-phone fa-fw w3-xlarge w3-center"></i><a
+                            href="tel:+8015133065" style="text-decoration-line: none;">(801) 513-3065</a><br></div>
+
+                    <div class="w3-hide-small w3-hover-text-black" style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
+                            class="fa fa-phone fa-fw w3-xlarge w3-center"></i>(801) 513-3065<br>
                     </div>
-                    <!-- <form action="/action_page.php" target="_blank"> -->
-                    <form action="mailto:cory@coryhardmancoaching.com" method="post" enctype="text/plain">
-                        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-                            <div class="w3-half">
-                                <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-                            </div>
-                            <div class="w3-half">
-                                <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-                            </div>
+
+                    <div class="w3-hover-text-black" style="text-shadow: 7px 7px 10px #b6a0c9;">
+                    <i class="fa fa-envelope fa-fw w3-xlarge w3-center"></i>
+                    <a href="mailto:cory@coryhardmancoaching.com" style="text-decoration-line: none;">cory@coryhardmancoaching.com</a><br>
+                    </div>
+                </div>
+                <!-- <form action="/action_page.php" target="_blank"> -->
+                <!-- <form action="mailto:cory@coryhardmancoaching.com" method="post" enctype="text/plain">
+                    <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+                        <div class="w3-half">
+                            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+                        </div>
+                        <div class="w3-half">
+                            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
                         </div>
                     </div>
-                        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-                        <button class="w3-button w3-black w3-right w3-section" type="submit">
-                            <i class="fa fa-paper-plane"></i> SEND MESSAGE
-                        </button>
-                    </form>
-                  <!-- Calendly inline widget begin -->
-                  <div class="calendly-inline-widget"
-                      data-url="https://calendly.com/cory-hardman/30-minute-1-1-coaching-session"
-                      style="min-width:320px;height:630px;"></div>
-                  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async>
-                  </script>
-                  <!-- Calendly inline widget end -->
-                
             </div>
+            <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+            <button class="w3-button w3-black w3-right w3-section" type="submit">
+                <i class="fa fa-paper-plane"></i> SEND MESSAGE
+            </button>
+            </form> -->
+                <!-- Calendly inline widget begin -->
+                <!-- <div class="calendly-inline-widget"
+                    data-url="https://calendly.com/cory-hardman/30-minute-1-1-coaching-session"
+                    style="min-width:320px;height:630px;"></div>
+                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async>
+                </script> -->
+                <!-- Calendly badge widget begin -->
+               <!-- Calendly link widget begin -->
+               <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
+                   style="background-color: #6200b3!important; color: white;">
+               <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+               <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
+               </script>
+               <a href="" style="text-decoration-line: none;"
+                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">Schedule
+                   Free 30min Now</a>
+               <!-- Calendly link widget end -->
+                </script>
+               </button>
+                <!-- Calendly badge widget end -->
+                <!-- Calendly inline widget end -->
+
+            </div>
+        </div>
+        <div class="fb-customerchat" page_id="https://coryhardmancoaching.com">
         </div>
     </div>
 
