--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <title>Cory Hardman Coaching</title>
+<meta name="Keywords"
+    content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your teen,relationship,build relationship,connect to your teen,teenager,teenagers">
+<meta name="description" content="Life Coach for mom's of teens." />
+
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Cory Hardman Coaching" />
+<meta property="og:description" content="A top rated life coach that helps mom's of teens find peace with themselves" />
+  <!-- Theme Made By www.w3schools.com modified by Jeremy Hardman Design -->
 <link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,22 +67,24 @@
     <!-- What is coaching Section -->
     <div class="w3-content w3-container w3-padding-64">
         <h3 class="w3-center">Empowerment</h3>
-       <div class="w3-container">
-        <div class="w3-col m6 w3-right w3-padding-large">
-            <p>In coaching, we focus on the present and the future, instead of dwelling on the past.
-                We uncover any thoughts you are having, even the ones you weren't aware of, that cause you to feel and
-                act a certain way. When you recognize these thoughts, you can decide if those thoughts are serving you
-                or hurting you and if you want to keep them.
-                I create a safe space to sort through your thoughts and be aware of how your thoughts create your
-                feelings. I give you tools to help you take your life from good to great!
-                Want to give it a try?</p>
-        </div>
-        <div class="">
-            <div class="w3-col m6 w3-center w3-padding-large">
-                <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image"
-                    alt="Photo of Me" width="500" height="333">
+        <div class="w3-container">
+            <div class="w3-col m6 w3-right w3-padding-large">
+                <p>In coaching, we focus on the present and the future, instead of dwelling on the past.
+                    We uncover any thoughts you are having, even the ones you weren't aware of, that cause you to feel
+                    and
+                    act a certain way. When you recognize these thoughts, you can decide if those thoughts are serving
+                    you
+                    or hurting you and if you want to keep them.
+                    I create a safe space to sort through your thoughts and be aware of how your thoughts create your
+                    feelings. I give you tools to help you take your life from good to great!
+                    Want to give it a try?</p>
             </div>
-        </div>
+            <div class="">
+                <div class="w3-col m6 w3-center w3-padding-large">
+                    <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image"
+                        alt="Photo of Me" width="500" height="333">
+                </div>
+            </div>
         </div>
         <div class="w3-center">
             <div class="w3-padding-16 w3-row w3-margin">
@@ -83,7 +94,7 @@
                         color:white;">WORK WITH ME</a></button>
 
                 <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
-                    style="background-color: #6200b3!important;"><a href="about.html" class="w3-button button-hover"
+                    style="background-color: #6200b3!important;"><a href="learnmore.html" class="w3-button button-hover"
                         style="background-color: #6200b3!important;
                         color:white;">LEARN MORE</a></button>
             </div>
