--- a/learnmore.html
+++ b/learnmore.html
@@ -152,7 +152,7 @@
                 <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
                     style="background-color: #6200b3!important;"><a href="about.html" class="w3-button button-hover"
                         style="background-color: #6200b3!important;
-                        color:white;">LEARN MORE</a></button>
+                        color:white;">ABOUT ME</a></button>
             </div>
         </div>
     </div>
