contact page update

--- a/contact.html
+++ b/contact.html
@@ -69,12 +69,12 @@
                     <!-- <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Syracuse
                     Utah,
                     US<br> -->
-                    <div class="w3-hide-large w3-hide-medium"
+                    <div class="w3-hide-large w3-hide-medium w3-hover-text-black"
                         style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
                             class="fa fa-phone fa-fw w3-xlarge w3-center"></i><a
                             href="tel:+8015133065" style="text-decoration-line: none;">(801) 513-3065</a><br></div>
 
-                    <div class="w3-hide-small w3-hover-text-black" style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
+                    <div class="w3-hide-small " style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
                             class="fa fa-phone fa-fw w3-xlarge w3-center"></i>(801) 513-3065<br>
                     </div>
 
