--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 me become the mother I want to be and show up in the ways I want to show up regardless of the actions of
                 those around me. I have learned that I can choose to love my children, but not their choices. Their
                 emotions, decisions, and actions are not a reflection of me or my parenting skills, but of them using
-                their agency the way the choose. We are blessed that God has given all of us agency. We are the only
+                their agency the way they choose. We are blessed that God has given all of us agency. We are the only
                 ones that can choose the way we feel and the way we live our life!</p>
         </div>
 
