--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
         <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
         <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-        <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a>
+        <!-- <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a> -->
         <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
                         color:white;">
             START NOW
