--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 skills and the decisions you make.</p>
 
             <p>Stop being a victim of your circumstances! Empower yourself by choosing who you want to be and how you
-                want to show up as a mother! Start living the life you wish you had and let me help your relationship
+                want to show up as a mother! Start living the life you want to have and let me help your relationship
                 with
                 your teen go from good to great!
             </p>
