seo and robots txt file

--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
+    <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3167BNVRVF"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-3167BNVRVF');
+</script>
+<link rel="canonical" href="https://www.coryhardmancoaching.com">
+<link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
 <title>Cory Hardman Coaching</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<base href="https://coryhardmancoaching.com" target="_blank">
+<meta charset="UTF-8">
+<meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
 <meta name="Keywords"
     content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your teen,relationship,build relationship,connect to your teen,teenager,teenagers">
 <meta name="description" content="Life Coach for mom's of teens." />
 
-<meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Cory Hardman Coaching" />
 <meta property="og:description" content="A top rated life coach that helps mom's of teens find peace with themselves" />
+ <meta property="og:url" content="https://coryhardmancoaching.com/"/>
+ <meta property="og:site_name" content="Cory Hardman Coaching"/>
   <!-- Theme Made By www.w3schools.com modified by Jeremy Hardman Design -->
 <link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,6 +41,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
 <link rel="stylesheet" href="styles.css">
 
+</head>
 <body>
 
     <!-- Navbar (sit on top) -->
