slight spelling adjust

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">I help mom's of teens gain confidence in their parenting skills</h3>
         <div class="w3-col w3-padding-large">
-            <p>Life coach for LDS moms of teens who feel like they are failing as a parent, feel guilty and who are
+            <p>Life coach for moms of teens who feel like they are failing as a parent, feel guilty and who are
                 worried about messing up their children. I help you feel peace, acceptance, and love for yourself and
                 your children, regardless of their actions. I teach you tools to gain confidence in your parenting
                 skills and the decisions you make.</p>
