--- a/learnmore.html
+++ b/learnmore.html
@@ -42,7 +42,7 @@
                 <span class="w3-xlarge">Your teen's choices are making you upset</span>
             </div>
             <div class="w3-row-padding w3-section">
-                <span class="w3-xlarge">Your teen has adictive behaviors</span>
+                <span class="w3-xlarge">Your teen has addictive behaviors</span>
             </div>
             <div class="w3-row-padding w3-section">
                 <span class="w3-xlarge">You worry about your teens future</span>
