header adjustments and file clean up

--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
-<html>
-<title>Cory Hardman Coaching</title>
-<link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
-<link rel="stylesheet" href="styles.css">
+<html lang="en-US">
 
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3167BNVRVF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3167BNVRVF');
+    </script>
+    <link rel="canonical" href="https://www.coryhardmancoaching.com">
+    <link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
+    <title>Cory Hardman Coaching</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="https://coryhardmancoaching.com" target="_blank">
+    <meta charset="UTF-8">
+    <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
+    <meta name="Keywords"
+        content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your teen,relationship,build relationship,connect to your teen,teenager,teenagers">
+    <meta name="description" content="Life Coach for mom's of teens." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cory Hardman Coaching" />
+    <meta property="og:description"
+        content="A top rated life coach that helps mom's of teens find peace with themselves" />
+    <meta property="og:url" content="https://coryhardmancoaching.com/" />
+    <meta property="og:site_name" content="Cory Hardman Coaching" />
+    <!-- Theme Made By www.w3schools.com modified by Jeremy Hardman Design -->
+    <link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
     <!-- Navbar (sit on top) -->
@@ -71,16 +101,17 @@
                     US<br> -->
                     <div class="w3-hide-large w3-hide-medium w3-hover-text-black"
                         style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
-                            class="fa fa-phone fa-fw w3-xlarge w3-center"></i><a
-                            href="tel:+8015133065" style="text-decoration-line: none;">(801) 513-3065</a><br></div>
+                            class="fa fa-phone fa-fw w3-xlarge w3-center"></i><a href="tel:+8015133065"
+                            style="text-decoration-line: none;">(801) 513-3065</a><br></div>
 
                     <div class="w3-hide-small " style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
                             class="fa fa-phone fa-fw w3-xlarge w3-center"></i>(801) 513-3065<br>
                     </div>
 
                     <div class="w3-hover-text-black" style="text-shadow: 7px 7px 10px #b6a0c9;">
-                    <i class="fa fa-envelope fa-fw w3-xlarge w3-center"></i>
-                    <a href="mailto:cory@coryhardmancoaching.com" style="text-decoration-line: none;">cory@coryhardmancoaching.com</a><br>
+                        <i class="fa fa-envelope fa-fw w3-xlarge w3-center"></i>
+                        <a href="mailto:cory@coryhardmancoaching.com"
+                            style="text-decoration-line: none;">cory@coryhardmancoaching.com</a><br>
                     </div>
                 </div>
                 <!-- <form action="/action_page.php" target="_blank"> -->
@@ -106,18 +137,18 @@
                 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async>
                 </script> -->
                 <!-- Calendly badge widget begin -->
-               <!-- Calendly link widget begin -->
-               <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
-                   style="background-color: #6200b3!important; color: white;">
-               <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-               <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
-               </script>
-               <a href="" style="text-decoration-line: none;"
-                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">Schedule
-                   Free 30min Now</a>
-               <!-- Calendly link widget end -->
-                </script>
-               </button>
+                <!-- Calendly link widget begin -->
+                <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
+                    style="background-color: #6200b3!important; color: white;">
+                    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
+                    </script>
+                    <a href="" style="text-decoration-line: none;"
+                        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">Schedule
+                        Free 30min Now</a>
+                    <!-- Calendly link widget end -->
+                    </script>
+                </button>
                 <!-- Calendly badge widget end -->
                 <!-- Calendly inline widget end -->
 
