--- a/footer.html
+++ b/footer.html
@@ -25,13 +25,18 @@
                         <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
                             href="mailto:cory@coryhardmancoaching.com"
                             style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
-                        <i class="fa fa-copyright" style="font-size:36px; color:white">
-                            <p style="color: white;">Copyright 2021 | Cory Hardman Coaching | All Rights</p>
-                            Reserved
-                        </i>
-                    </span></div>
+                    </span>
+                </div>
             </div>
         </div>
+        <div class="w3-row w3-center">
+            <p style="color: white;"></p> <i class="fa fa-copyright" style="font-size:14px; color:white"></i>
+            Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
+            </p>
+        </div>
+
+
+
     </footer>
 
 </body>
