--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3167BNVRVF"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3167BNVRVF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    gtag('config', 'G-3167BNVRVF');
-</script>
-<link rel="canonical" href="https://www.coryhardmancoaching.com">
-<link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
-<title>Cory Hardman Coaching</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<base href="https://coryhardmancoaching.com" target="_blank">
-<meta charset="UTF-8">
-<meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
-<meta name="Keywords"
-    content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your teen,relationship,build relationship,connect to your teen,teenager,teenagers">
-<meta name="description" content="Life Coach for mom's of teens." />
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Cory Hardman Coaching" />
-<meta property="og:description" content="A top rated life coach that helps mom's of teens find peace with themselves" />
- <meta property="og:url" content="https://coryhardmancoaching.com/"/>
- <meta property="og:site_name" content="Cory Hardman Coaching"/>
-  <!-- Theme Made By www.w3schools.com modified by Jeremy Hardman Design -->
-<link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
+        gtag('config', 'G-3167BNVRVF');
+    </script>
+    <link rel="canonical" href="https://www.coryhardmancoaching.com">
+    <link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
+    <title>Cory Hardman Coaching</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="https://coryhardmancoaching.com" target="_blank">
+    <meta charset="UTF-8">
+    <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
+    <meta name="Keywords"
+        content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your teen,relationship,build relationship,connect to your teen,teenager,teenagers">
+    <meta name="description" content="Life Coach for mom's of teens." />
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
-<link rel="stylesheet" href="styles.css">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cory Hardman Coaching" />
+    <meta property="og:description"
+        content="A top rated life coach that helps mom's of teens find peace with themselves" />
+    <meta property="og:url" content="https://coryhardmancoaching.com/" />
+    <meta property="og:site_name" content="Cory Hardman Coaching" />
+    <!-- Theme Made By www.w3schools.com modified by Jeremy Hardman Design -->
+    <link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
 
+<body>
     <!-- Navbar (sit on top) -->
     <div w3-include-html="header.html"></div>
 
