removed link issues

--- a/footer.html
+++ b/footer.html
@@ -3,9 +3,9 @@
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
             <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
-                target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
             <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
-                target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+                target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
         </div>
 
         <div class="w3-container w3-row w3-center">
