--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
     <title>Cory Hardman Coaching</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="https://coryhardmancoaching.com" target="_blank">
+    <base href="https://coryhardmancoaching.com">
     <meta charset="UTF-8">
     <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
     <meta name="Keywords"
@@ -90,7 +90,7 @@
 
         <div class="w3-row w3-padding-32 w3-section">
             <!-- <div class="w3-col m4 w3-container">
-                <a href="https://goo.gl/maps/Z2GVpd2rYc9iHxY67" title="Location" target="_blank"
+                <a href="https://goo.gl/maps/Z2GVpd2rYc9iHxY67" title="Location"
                     class="w3-hover-opacity"><img src="images/static_map.php.png" class="w3-image w3-round"
                         style="width:100%"></a>
             </div> -->
@@ -114,7 +114,7 @@
                             style="text-decoration-line: none;">cory@coryhardmancoaching.com</a><br>
                     </div>
                 </div>
-                <!-- <form action="/action_page.php" target="_blank"> -->
+                <!-- <form action="/action_page.php" > -->
                 <!-- <form action="mailto:cory@coryhardmancoaching.com" method="post" enctype="text/plain">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
                         <div class="w3-half">
