--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
     <title>Cory Hardman Coaching</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="https://coryhardmancoaching.com" target="_blank">
+    <base href="https://coryhardmancoaching.com">
     <meta charset="UTF-8">
     <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
     <meta name="Keywords"
