removed unused style links

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
     <title>Cory Hardman Coaching</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="https://coryhardmancoaching.com" target="_blank">
+    <base href="https://coryhardmancoaching.com">
     <meta charset="UTF-8">
     <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
     <meta name="Keywords"
@@ -33,16 +33,13 @@
     <meta property="og:site_name" content="Cory Hardman Coaching" />
     <!-- Theme Made By www.w3schools.com modified by Jeremy Hardman Design -->
     <link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
-
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+    <!--adobe fonts-->
     <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <!-- Navbar (sit on top) -->
