--- a/learnmore.html
+++ b/learnmore.html
@@ -35,14 +35,12 @@
     <link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+    <!--adobe fonts-->
     <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <!-- Navbar (sit on top) -->
