--- a/about.html
+++ b/about.html
@@ -14,8 +14,7 @@
 
         gtag('config', 'G-3167BNVRVF');
     </script>
-    <link rel="canonical" href="https://www.coryhardmancoaching.com">
-    <link rel="nofollow,noopener" href="www.schoolandcollegelistings.com/">
+    <link rel="canonical" href="https://coryhardmancoaching.com">
     <title>Cory Hardman Coaching</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="https://coryhardmancoaching.com">
