--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,63 @@
 <body>
 
     <!-- Navbar (sit on top) -->
-    <header w3-include-html="header.html"></header>
+    <div class="w3-top">
+        <div class="w3-bar" id="myNavbar">
+            <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
+                href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="index.html" class="w3-bar-item w3-button">HOME</a>
+            <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
+            <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
+            <!-- <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
+                WORK WITH ME</a> -->
+            <button class="button-hover button-hover-shadow w3-button w3-right w3-hide-small w3-hover-opacity"
+                style="background-color: #6200b3!important; color: white;">
+                <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
+                </script>
+                <a href="" style="text-decoration-line: none;"
+                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">Schedule
+                    Now</a>
+                <!-- Calendly link widget end -->
+                </script>
+            </button>
+        </div>
+
+        <!-- Navbar on small screens -->
+        <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+            <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
+            <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
+            <!-- <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a> -->
+            <!-- <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+                        color:white;"> -->
+            START NOW
+            </a>
+        </div>
+    </div>
 
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
         <div class="w3-padding-large">
+            <div class="w3-panel w3-center" id="signup">
+                <!-- Calendly badge widget begin -->
+                <!-- Calendly link widget begin -->
+                <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
+                    style="background-color: #6200b3!important; color: white;">
+                    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
+                    </script>
+                    <a href="" style="text-decoration-line: none;"
+                        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">Schedule
+                        Now</a>
+                    <!-- Calendly link widget end -->
+                    </script>
+                </button>
+                <!-- Calendly badge widget end -->
+                <!-- Calendly inline widget end -->
+            </div>
+
             <h3 class="w3-center">Who I work with</h3>
 
             <p>I work with moms of teens and young adults who are ready and willing to work hard and create the family
@@ -86,16 +138,10 @@
         <!-- <p class="w3-center"><em>I'd love your feedback!</em></p> -->
 
         <div class="w3-row w3-padding-32 w3-section">
-            <!-- <div class="w3-col m4 w3-container">
-                <a href="https://goo.gl/maps/Z2GVpd2rYc9iHxY67" title="Location"
-                    class="w3-hover-opacity"><img src="images/static_map.php.png" class="w3-image w3-round"
-                        style="width:100%"></a>
-            </div> -->
+
             <div class="w3-panel w3-center">
                 <div class="w3-xlarge w3-margin-bottom">
-                    <!-- <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Syracuse
-                    Utah,
-                    US<br> -->
+
                     <div class="w3-hide-large w3-hide-medium w3-hover-text-black"
                         style="text-shadow: 7px 7px 10px #b6a0c9;"> <i
                             class="fa fa-phone fa-fw w3-xlarge w3-center"></i><a href="tel:+8015133065"
@@ -111,28 +157,7 @@
                             style="text-decoration-line: none;">cory@coryhardmancoaching.com</a><br>
                     </div>
                 </div>
-                <!-- <form action="/action_page.php" > -->
-                <!-- <form action="mailto:cory@coryhardmancoaching.com" method="post" enctype="text/plain">
-                    <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-                        <div class="w3-half">
-                            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-                        </div>
-                        <div class="w3-half">
-                            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-                        </div>
-                    </div>
-            </div>
-            <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-            <button class="w3-button w3-black w3-right w3-section" type="submit">
-                <i class="fa fa-paper-plane"></i> SEND MESSAGE
-            </button>
-            </form> -->
-                <!-- Calendly inline widget begin -->
-                <!-- <div class="calendly-inline-widget"
-                    data-url="https://calendly.com/cory-hardman/30-minute-1-1-coaching-session"
-                    style="min-width:320px;height:630px;"></div>
-                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async>
-                </script> -->
+
                 <!-- Calendly badge widget begin -->
                 <!-- Calendly link widget begin -->
                 <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
@@ -142,7 +167,7 @@
                     </script>
                     <a href="" style="text-decoration-line: none;"
                         onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">Schedule
-                        Free 30min Now</a>
+                        Now</a>
                     <!-- Calendly link widget end -->
                     </script>
                 </button>
@@ -156,7 +181,44 @@
     </div>
 
     <!-- Footer -->
-    <footer w3-include-html="footer.html">
+    <footer class="w3-center w3-black w3-padding-64 w3-hover-opacity-off w3-container">
+        <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+        <div class="w3-xlarge w3-section">
+            <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
+                target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+            <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
+                target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+        </div>
+
+        <div class="w3-container w3-row w3-center">
+            <div class="w3-col m6 w3-center w3-padding-large">
+                <div class="w3-center w3-padding-large">
+                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
+                        alt="CH_coaching_logo_branding">
+                </div>
+            </div>
+            <div class="w3-col m6 w3-center w3-padding-large">
+                <div style="padding-top: 20px;">
+                    <span class="w3-hover-text-gray">
+                        <i class="fa fa-phone fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                            href="tel:8015133065" style="text-decoration-line: none;">(801)513-3065</a><br>
+                    </span>
+                    <span class="w3-hover-text-gray">
+                        <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                            href="mailto:cory@coryhardmancoaching.com"
+                            style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="w3-row w3-center">
+            <p style="color: white;"></p> <i class="fa fa-copyright" style="font-size:14px; color:white"></i>
+            Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
+            </p>
+        </div>
+
+
+
     </footer>
 
     <script type="module" src="module.js">
