--- a/learnmore.html
+++ b/learnmore.html
@@ -21,7 +21,10 @@
     <meta charset="UTF-8">
     <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
     <meta name="Keywords"
-        content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your teen,relationship,build relationship,connect to your teen,teenager,teenagers">
+        content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your
+        thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your
+        teen,relationship,build relationship,connect to your teen,teenager,teenagers,one on one,zoom,one
+        coaching,Cory,Hardman,Cory Hardman">
     <meta name="description" content="Life Coach for mom's of teens." />
 
     <meta property="og:type" content="website" />
