--- a/learnmore.html
+++ b/learnmore.html
@@ -20,8 +20,7 @@
     <base href="https://coryhardmancoaching.com">
     <meta charset="UTF-8">
     <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
-    <meta name="Keywords"
-        content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your
+    <meta name="Keywords" content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your
         thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your
         teen,relationship,build relationship,connect to your teen,teenager,teenagers,one on one,zoom,one
         coaching,Cory,Hardman,Cory Hardman">
@@ -44,37 +43,35 @@
 </head>
 
 <body>
-
     <!-- Navbar (sit on top) -->
-  <div class="w3-top">
-      <div class="w3-bar" id="myNavbar">
-          <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
-              href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-              <i class="fa fa-bars"></i>
-          </a>
-          <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-          <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
-          <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
-          <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
-              WORK WITH ME</a>
-          <a href="contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
-              style="background-color: #6200b3!important;
+    <div class="w3-top">
+        <div class="w3-bar" id="myNavbar">
+            <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
+                href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="Home.html" class="w3-bar-item w3-button">HOME</a>
+            <a href="About.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
+            <a href="LearnMore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
+            <a href="Contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
+                WORK WITH ME</a>
+            <a href="Contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
+                style="background-color: #6200b3!important;
                         color:white;">
-              START NOW
-          </a>
-      </div>
+                START NOW
+            </a>
+        </div>
 
-      <!-- Navbar on small screens -->
-      <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-          <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
-          <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-          <!-- <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a> -->
-          <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+        <!-- Navbar on small screens -->
+        <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+            <a href="About.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
+            <a href="LearnMore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
+            <a href="Contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
                         color:white;">
-              START NOW
-          </a>
-      </div>
-  </div>
+                START NOW
+            </a>
+        </div>
+    </div>
 
     <!-- First Parallax Image with Logo Text -->
     <div class="learnmore-bgimg w3-display-container w3-opacity-min" id="home">
@@ -215,45 +212,45 @@
         </div>
     </div>
     <!-- Footer -->
-   <footer class="w3-center w3-black w3-padding-64 w3-hover-opacity-off w3-container">
-       <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-       <div class="w3-xlarge w3-section">
-           <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
-               target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-           <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
-               target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-       </div>
+    <footer class="w3-center w3-black w3-padding-64 w3-hover-opacity-off w3-container">
+        <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+        <div class="w3-xlarge w3-section">
+            <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
+                target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+            <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
+                target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+        </div>
 
-       <div class="w3-container w3-row w3-center">
-           <div class="w3-col m6 w3-center w3-padding-large">
-               <div class="w3-center w3-padding-large">
-                   <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
-                       alt="CH_coaching_logo_branding">
-               </div>
-           </div>
-           <div class="w3-col m6 w3-center w3-padding-large">
-               <div style="padding-top: 20px;">
-                   <span class="w3-hover-text-gray">
-                       <i class="fa fa-phone fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
-                           href="tel:8015133065" style="text-decoration-line: none;">(801)513-3065</a><br>
-                   </span>
-                   <span class="w3-hover-text-gray">
-                       <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
-                           href="mailto:cory@coryhardmancoaching.com"
-                           style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
-                   </span>
-               </div>
-           </div>
-       </div>
-       <div class="w3-row w3-center">
-           <p style="color: white;"></p> <i class="fa fa-copyright" style="font-size:14px; color:white"></i>
-           Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
-           </p>
-       </div>
+        <div class="w3-container w3-row w3-center">
+            <div class="w3-col m6 w3-center w3-padding-large">
+                <div class="w3-center w3-padding-large">
+                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
+                        alt="CH_coaching_logo_branding">
+                </div>
+            </div>
+            <div class="w3-col m6 w3-center w3-padding-large">
+                <div style="padding-top: 20px;">
+                    <span class="w3-hover-text-gray">
+                        <i class="fa fa-phone fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                            href="tel:8015133065" style="text-decoration-line: none;">(801)513-3065</a><br>
+                    </span>
+                    <span class="w3-hover-text-gray">
+                        <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                            href="mailto:cory@coryhardmancoaching.com"
+                            style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="w3-row w3-center">
+            <p style="color: white;"></p> <i class="fa fa-copyright" style="font-size:14px; color:white"></i>
+            Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
+            </p>
+        </div>
 
 
 
-   </footer>
+    </footer>
 
     <script type="module" src="module.js">
 
