--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' coryhardmancoaching.com/* *.coryhardmancoaching.com; img-src 'self' ;
-        script-src 'strict-dynamic' 'nonce-rAnd0m123' 'unsafe-inline' http: https:; object-src 'none' ; style-src 'self' 'coryhardmancoaching.com'
-        ; base-uri 'none' ; require-trusted-types-for 'script' ;" /> -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3167BNVRVF"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -46,7 +42,7 @@
 
 <body>
     <!-- Navbar (sit on top) -->
-    <div class="w3-top">
+    <div id="top" class="w3-top">
         <div class="w3-bar" id="myNavbar">
             <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
                 href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
@@ -100,8 +96,6 @@
                 your teen go from good to great!
             </p>
         </div>
-
-
     </div>
 
     <!-- Second Parallax Image with Portfolio Text -->
@@ -150,7 +144,7 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-64 w3-hover-opacity-off w3-container">
-        <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+        <a href="#top" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
             <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
                 target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
@@ -184,12 +178,7 @@
             Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
             </p>
         </div>
-
-
-
     </footer>
-    <script type="module" src="module.js">
-    </script>
     <script>
         // Modal Image Gallery
         function onClick(element) {
@@ -198,7 +187,6 @@
             var captionText = document.getElementById("caption");
             captionText.innerHTML = element.alt;
         }
-
         // Change style of navbar on scroll
         window.onscroll = function () {
             myFunction()
@@ -212,7 +200,6 @@
                 navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
             }
         }
-
         // Used to toggle the menu on small screens when clicking on the menu button
         function toggleFunction() {
             var x = document.getElementById("navDemo");
@@ -223,7 +210,6 @@
             }
         }
     </script>
-
 </body>
 
 </html>
